--- a/src/pages/LandingPage/components/ContactSection/ContactSection.css
+++ b/src/pages/LandingPage/components/ContactSection/ContactSection.css
@@ -331,7 +331,8 @@
 
   .lp-13-form-container {
     display: flex;
-    width: 358px;
+    width: 100%;
+    max-width: 358px;
     padding: 16px;
     flex-direction: column;
     justify-content: center;
@@ -346,7 +347,8 @@
 
   .lp-13-contact-form {
     display: flex;
-    width: 324px;
+    width: 100%;
+    max-width: 324px;
     flex-direction: column;
     align-items: center;
     gap: 16px;
@@ -362,8 +364,8 @@
     gap: 5.691px;
     align-self: stretch;
     border-radius: 8.537px;
-    border: 1.423px solid #f8f0f0ff;
-        color: #868686;
+    border: 1.423px solid #faf6f6ff;
+    background: #FFF;
     font-family: inter,sans-serif;
     font-size: 12px;
     font-style: normal;
@@ -373,20 +375,20 @@
 
   .lp-13-send-button {
     color: var(--Base-White, #FFF);
-font-family: inter, sans-serif;
-font-size: 15.723px;
-font-style: normal;
-font-weight: 700;
-line-height: 26.955px; /* 171.429% */
+    font-family: inter, sans-serif;
+    font-size: 15.723px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 26.955px; /* 171.429% */
     display: flex;
-height: 44.924px;
-padding: 8.985px 17.97px;
-justify-content: center;
-align-items: center;
-gap: 9.492px;
+    height: 44.924px;
+    padding: 8.985px 17.97px;
+    justify-content: center;
+    align-items: center;
+    gap: 9.492px;
     border-radius: 13.477px;
-border: 4.492px solid #1246FF;
-background: linear-gradient(180deg, #1246FF -23.96%, #4770FF 134.37%);
-box-shadow: 0 0 0.434px 1.301px rgba(0, 0, 0, 0.05), 0 5.204px 5.638px -2.602px rgba(0, 0, 0, 0.20);
+    border: 4.492px solid #1246FF;
+    background: linear-gradient(180deg, #1246FF -23.96%, #4770FF 134.37%);
+    box-shadow: 0 0 0.434px 1.301px rgba(0, 0, 0, 0.05), 0 5.204px 5.638px -2.602px rgba(0, 0, 0, 0.20);
   }
 }
