--- a/src/pages/LandingPage/components/DisputeSection/DisputeSection.css
+++ b/src/pages/LandingPage/components/DisputeSection/DisputeSection.css
@@ -459,9 +459,10 @@
     gap: 20px;
   }
 
-  .lg-7-content {
+  .lp-7-content {
     display: flex;
-    width: 368px;
+    width: 100%;
+    max-width: 368px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -498,19 +499,20 @@
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
-    margin-top: -35px;
+    margin-top: 0px;
     margin-bottom: 20px;
     line-height: 24px; /* 150% */
   }
 
   .lp-7-circle-container {
+    display: flex;
     align-items: center;
     justify-content: center;
-    
     width: 100%;
-    max-width: 320px;
+    max-width: 100%;
     height: 370px;
     margin-top: 70px;
+    overflow: visible;
   }
 
   .lp-7-oracle-circle-group {
