--- a/src/pages/LandingPage/components/EarnTokenSection/EarnTokenSection.css
+++ b/src/pages/LandingPage/components/EarnTokenSection/EarnTokenSection.css
@@ -452,7 +452,8 @@ display: flex;
 
   .lp-8-content {
     display: flex;
-    width: 368px;
+    width: 100%;
+    max-width: 368px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -487,8 +488,9 @@ display: flex;
 
   .lp-8-circle-container {
     width: 100%;
-    max-width: 520px;
+    max-width: 100%;
     height: 300px;
+    overflow: visible;
   }
 
   .lp-8-token-circle-group {
