--- a/src/pages/LandingPage/components/MultiChainSection/MultiChainSection.css
+++ b/src/pages/LandingPage/components/MultiChainSection/MultiChainSection.css
@@ -351,7 +351,8 @@
 
   .lp-10-content {
     display: flex;
-    width: 368px;
+    width: 100%;
+    max-width: 368px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -386,8 +387,9 @@
 
   .lp-10-circle-container {
     width: 100%;
-    max-width: 320px;
+    max-width: 100%;
     height: 350px;
+    overflow: visible;
   }
 
   .lp-10-chain-circle-group {
