--- a/src/pages/LandingPage/components/ProfileSection/ProfileSection.css
+++ b/src/pages/LandingPage/components/ProfileSection/ProfileSection.css
@@ -388,7 +388,8 @@
 
   .lp-2-content {
     display: flex;
-    width: 375px;
+    width: 100%;
+    max-width: 375px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
